--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
-  "bracketSpacing": true,
-  "printWidth": 80,
-  "singleQuote": true,
-  "tabWidth": 2,
+  "semi": true,
+  "singleQuote": false,
   "trailingComma": "all",
-  "useTabs": false
+  "printWidth": 80,
+  "tabWidth": 2,
+  "useTabs": false,
+  "bracketSpacing": true,
+  "arrowParens": "always"
 }
