--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,10 +57,10 @@ jobs:
     if: ${{ success() }}
     env:
          TF_VAR_DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-         TF_VAR_Github_sha: ${{ env.COMMIT_SHORT_SHA }}
+         TF_VAR_Github_sha: ${{ needs.build-push.outputs.commit_short_sha }}
          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-         AWS_profile: ${{ env.AWS_PROFILE }}
+         AWS_profile: nawy
     steps:
       - name: Checkout
         uses: actions/checkout@v4
