--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,9 @@ jobs:
       - name: Run linters
         uses: wearerequired/lint-action@v2
         with:
-          eslint: true
+          # eslint: true
           prettier: true
+          auto_fix: true
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -54,7 +55,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     environment: local 
-    if: ${{ success() }}
+    # if: ${{ success() }}
+    needs: [prettier,build-push]
     env:
          TF_VAR_DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
          TF_VAR_Github_sha: ${{ needs.build-push.outputs.commit_short_sha }}
@@ -71,10 +73,13 @@ jobs:
       - name: Terraform init
         id: init
         run: terraform init 
+        working-directory: ./terraform
   
       - name: Terraform format & validate 
         id: fmt
         run: terraform fmt -check && terraform validate
+        working-directory: ./terraform
      
       - name: Terraform plan & apply
         run: terraform plan -no-color -input=false && terraform apply -auto-approve -input=false
+        working-directory: ./terraform
