--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,11 @@ jobs:
           # eslint: true
           prettier: true
           auto_fix: true
+          github_token: ${{ github.token }} 
+          commit: true
+          git_no_verify: false
+          git_name: Lint Action
+          commit_message: Fix code style issues with ${linter}
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
