fix: remove prettier

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           # eslint: true
           prettier: true
           auto_fix: true
-          github_token: ${{ github.token }} 
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           commit: true
           git_no_verify: false
           git_name: Lint Action
