--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,10 @@ on:
   push:
     branches:
     - master
-    
+permissions:
+  contents: write
+  workflows: write
+
 jobs:
   build-push:
     runs-on: ubuntu-latest
