--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,8 @@ jobs:
           git_no_verify: false
           git_name: Lint Action
           commit_message: Fix code style issues with ${linter}
+      - name: Checkout after lint 
+        uses: actions/checkout@v4
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -85,10 +87,10 @@ jobs:
         run: terraform init 
         working-directory: ./terraform
   
-      - name: Terraform format & validate 
-        id: fmt
-        run: terraform fmt -check && terraform validate
-        working-directory: ./terraform
+      # - name: Terraform format & validate 
+      #   id: fmt
+      #   run: terraform fmt -check && terraform validate
+      #   working-directory: ./terraform
      
       - name: Terraform plan & apply
         run: terraform plan -no-color -input=false && terraform apply -auto-approve -input=false
