--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/johnpapa/node-hello#readme",
   "devDependencies": {
     "eslint": "^9.35.0",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "newrelic": "latest"
   }
 }
