--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,11 +51,13 @@ jobs:
         # with:
         #   username: ${{ secrets.DOCKERHUB_USERNAME }}
         #   password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4 # More information on this action can be found below in the 'AWS Credentials' section
+        with:
+          aws-region: eu-north-1
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
-        with:
-          aws-region: eu-north-1
       - name: Set short git commit SHA
         id: short-sha
         run: |
