--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,10 @@ jobs:
           commit_message: Fix code style issues with ${linter}
       - name: Checkout after lint 
         uses: actions/checkout@v4
+      - name: Update local checkout to latest commit
+        run: |
+             git fetch origin ${{ github.ref }}
+             git checkout ${{ github.ref }}
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
