--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,6 +100,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Set short git commit SHA
+        id: short-sha
+        run: |
+          shortSha=$(git rev-parse  HEAD )
+          echo "COMMIT_SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
+          # echo "COMMIT_SHORT_SHA=$shortSha" >> $GITHUB_ENV
+          TF_VAR_Github_sha=$shortSha
       - name: Setup Terraform with specified version on the runner
         uses: hashicorp/setup-terraform@v2
         with:
